all_heroes_sorted_by_alphabetical.html

--- a/all_heroes_sorted_by_alphabetical.html
+++ b/all_heroes_sorted_by_alphabetical.html
@@ -1,338 +1,450 @@
 [
 {
-"name_of_hero":"Aamon"
+"name_of_hero":"Aamon",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Aamon%20-%20Hero1091.png"
 },
 {
-"name_of_hero":"Akai"
+"name_of_hero":"Akai",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Akai%20-%20Hero091.png"
 },
 {
-"name_of_hero":"Aldous"
+"name_of_hero":"Aldous",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Aldous%20-%20Hero641%20.png"
 },
 {
-"name_of_hero":"Alice"
+"name_of_hero":"Alice",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Alice%20-%20Hero041.png"
 },
 {
-"name_of_hero":"Alpha"
+"name_of_hero":"Alpha",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Alpha%20-%20Hero281.png"
 },
 {
-"name_of_hero":"Alucard"
+"name_of_hero":"Alucard",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Alucard%20-%20Hero071.png"
 },
 {
-"name_of_hero":"Angela"
+"name_of_hero":"Angela",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Angela%20-%20Hero551.png"
 },
 {
-"name_of_hero":"Argus"
+"name_of_hero":"Argus",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Argus%20-%20Hero451.png"
 },
 {
-"name_of_hero":"Atlas"
+"name_of_hero":"Atlas",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Atlas%20-%20Hero931.png"
 },
 {
-"name_of_hero":"Aulus"
+"name_of_hero":"Aulus",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Aulus%20-%20Hero1081.png"
 },
 {
-"name_of_hero":"Aurora"
+"name_of_hero":"Aurora",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Aurora%20-%20Hero361.png"
 },
 {
-"name_of_hero":"Badang"
+"name_of_hero":"Badang",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Badang%20-%20Hero771.png"
 },
 {
-"name_of_hero":"Balmond"
+"name_of_hero":"Balmond",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Balmond%20-%20Hero021.png"
 },
 {
-"name_of_hero":"Bane"
+"name_of_hero":"Bane",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Bane%20-%20Hero111.png"
 },
 {
-"name_of_hero":"Barats"
+"name_of_hero":"Barats",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Barats%20-%20Hero991.png"
 },
 {
-"name_of_hero":"Baxia"
+"name_of_hero":"Baxia",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Baxia%20-%20Hero871.png"
 },
 {
-"name_of_hero":"Beatrix"
+"name_of_hero":"Beatrix",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Beatrix%20-%20Hero1051.png"
 },
 {
-"name_of_hero":"Belerick"
+"name_of_hero":"Belerick",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Belerick%20-%20Hero701.png"
 },
 {
-"name_of_hero":"Benedetta"
+"name_of_hero":"Benedetta",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Benedetta%20-%20Hero971.png"
 },
 {
-"name_of_hero":"Brody"
+"name_of_hero":"Brody",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Brody%20-%20Hero1001.png"
 },
 {
-"name_of_hero":"Bruno"
+"name_of_hero":"Bruno",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Bruno%20-%20Hero121.png"
 },
 {
-"name_of_hero":"Carmilla"
+"name_of_hero":"Carmilla",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Carmilla%20-%20Hero921.png"
 },
 {
-"name_of_hero":"Cecilion"
+"name_of_hero":"Cecilion",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Cecilion%20-%20Hero911.png"
 },
 {
-"name_of_hero":"Chang'e"
+"name_of_hero":"Chang'e",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Chang'e%20-%20Hero611.png"
 },
 {
-"name_of_hero":"Chou"
+"name_of_hero":"Chou",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Chou%20-%20Hero261.png"
 },
 {
-"name_of_hero":"Claude"
+"name_of_hero":"Claude",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Claude%20-%20Hero651.png"
 },
 {
-"name_of_hero":"Clint"
+"name_of_hero":"Clint",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Clint%20-%20Hero131.png"
 },
 {
-"name_of_hero":"Cyclops"
+"name_of_hero":"Cyclops",
+"portrait_of_hero'":"https://github.com/Lara3924/Lara_Image/raw/main/Cyclops%20-%20Hero331.png"
 },
 {
-"name_of_hero":"Diggie"
+"name_of_hero":"Diggie",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Diggie%20-%20Hero481.png"
 },
 {
-"name_of_hero":"Dyroth"
+"name_of_hero":"Dyroth",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Dyrroth%20-%20Hero851.png"
 },
 {
-"name_of_hero":"Esmeralda"
+"name_of_hero":"Esmeralda",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Esmeralda%20-%20Hero811.png"
 },
 {
-"name_of_hero":"Estes"
+"name_of_hero":"Estes",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Estes%20-%20Hero341.png"
 },
 {
-"name_of_hero":"Eudora"
+"name_of_hero":"Eudora",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Eudora%20-%20Hero151.png"
 },
 {
-"name_of_hero":"Fanny"
+"name_of_hero":"Fanny",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Fanny%20-%20Hero171.png"
 },
 {
-"name_of_hero":"Faramis"
+"name_of_hero":"Faramis",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Faramis%20-%20Hero761.png"
 },
 {
-"name_of_hero":"Floryn"
+"name_of_hero":"Floryn",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Floryn%20-%20Hero1121.png"
 },
 {
-"name_of_hero":"Franco"
+"name_of_hero":"Franco",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Franco%20-%20Hero101.png"
 },
 {
-"name_of_hero":"Freya"
+"name_of_hero":"Freya",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Freya%20-%20Hero221.png"
 },
 {
-"name_of_hero":"Gatotkaca"
+"name_of_hero":"Gatotkaca",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Gatotkaca%20-%20Hero411.png"
 },
 {
-"name_of_hero":"Gloo"
+"name_of_hero":"Gloo",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Gloo%20-%20Hero1041.png"
 },
 {
-"name_of_hero":"Gord"
+"name_of_hero":"Gord",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Gord%20-%20Hero231.png"
 },
 {
-"name_of_hero":"Granger"
+"name_of_hero":"Granger",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Granger%20-%20Hero791.png"
 },
 {
-"name_of_hero":"Grock"
+"name_of_hero":"Grock",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Grock%20-%20Hero441.png"
 },
 {
-"name_of_hero":"Guinevere"
+"name_of_hero":"Guinevere",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Guinevere%20-%20Hero801.png"
 },
 {
-"name_of_hero":"Gusion"
+"name_of_hero":"Gusion",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Gusion%20-%20Hero561.png"
 },
 {
-"name_of_hero":"Hanabi"
+"name_of_hero":"Hanabi",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Hanabi%20-%20Hero601.png"
 },
 {
-"name_of_hero":"Hanzo"
+"name_of_hero":"Hanzo",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Hanzo%20-%20Hero691.png"
 },
 {
-"name_of_hero":"Harith"
+"name_of_hero":"Harith",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Harith%20-%20Hero731.png"
 },
 {
-"name_of_hero":"Harley"
+"name_of_hero":"Harley",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Harley%20-%20Hero421.png"
 },
 {
-"name_of_hero":"Hayabusa"
+"name_of_hero":"Hayabusa",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Hayabusa%20-%20Hero211.png"
 },
 {
-"name_of_hero":"Helcurt"
+"name_of_hero":"Helcurt",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Helcurt%20-%20Hero511.png"
 },
 {
-"name_of_hero":"Hilda"
+"name_of_hero":"Hilda",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Hilda%20-%20Hero351.png"
 },
 {
-"name_of_hero":"Hylos"
+"name_of_hero":"Hylos",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Hylos%20-%20Hero491.png"
 },
 {
-"name_of_hero":"Irithel"
+"name_of_hero":"Irithel",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Irithel%20-%20Hero431.png"
 },
 {
-"name_of_hero":"Jawhead"
+"name_of_hero":"Jawhead",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Jawhead%20-%20Hero541.png"
 },
 {
-"name_of_hero":"Johnson"
+"name_of_hero":"Johnson",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Johnson%20-%20Hero321.png"
 },
 {
-"name_of_hero":"Kadita"
+"name_of_hero":"Kadita",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Kadita%20-%20Hero751.png"
 },
 {
-"name_of_hero":"Kagura"
+"name_of_hero":"Kagura",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Kagura%20-%20Hero251%20(Revamped).png"
 },
 {
-"name_of_hero":"Kaja"
+"name_of_hero":"Kaja",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Kaja%20-%20Hero621.png"
 },
 {
-"name_of_hero":"Karina"
+"name_of_hero":"Karina",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Karina%20-%20Hero081.png"
 },
 {
-"name_of_hero":"Karrie"
+"name_of_hero":"Karrie",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Karrie%20-%20Hero401.png"
 },
 {
-"name_of_hero":"Khaleed"
+"name_of_hero":"Khaleed",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Khaleed%20-%20Hero981.png"
 },
 {
-"name_of_hero":"Khufra"
+"name_of_hero":"Khufra",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Khufra%20-%20Hero781.png"
 },
 {
-"name_of_hero":"Kimmy"
+"name_of_hero":"Kimmy",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Kimmy%20-%20Hero711.png"
 },
 {
-"name_of_hero":"Lancelot"
+"name_of_hero":"Lancelot",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Lancelot%20-%20Hero471%20(Revamped).png"
 },
 {
-"name_of_hero":"Lapu-Lapu"
+"name_of_hero":"Lapu-Lapu",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Lapu-Lapu%20-%20Hero371.png"
 },
 {
-"name_of_hero":"Layla"
+"name_of_hero":"Layla",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Layla%20-%20Hero181.png"
 },
 {
-"name_of_hero":"Leomord"
+"name_of_hero":"Leomord",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Leomord%20-%20Hero671.png"
 },
 {
-"name_of_hero":"Lesley"
+"name_of_hero":"Lesley",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Lesley%20-%20Hero531.png"
 },
 {
-"name_of_hero":"Ling"
+"name_of_hero":"Ling",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Ling%20-%20Hero841.png"
 },
 {
-"name_of_hero":"Lolita"
+"name_of_hero":"Lolita",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Lolita%20-%20Hero201.png"
 },
 {
-"name_of_hero":"Lunox"
+"name_of_hero":"Lunox",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Lunox%20-%20Hero681.png"
 },
 {
-"name_of_hero":"Luo Yi"
+"name_of_hero":"Luo Yi",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Luo%20yi%20-%20Hero961.png"
 },
 {
-"name_of_hero":"Lylia"
+"name_of_hero":"Lylia",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Lylia%20-%20Hero861.png"
 },
 {
-"name_of_hero":"Martis"
+"name_of_hero":"Martis",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Martis%20-%20Hero581.png"
 },
 {
-"name_of_hero":"Masha"
+"name_of_hero":"Masha",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Masha%20-%20Hero881.png"
 },
 {
-"name_of_hero":"Mathilda"
+"name_of_hero":"Mathilda",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Mathilda%20-%20Hero1021.png"
 },
 {
-"name_of_hero":"Minotaur"
+"name_of_hero":"Minotaur",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Minotaur%20-%20Hero191.png"
 },
 {
-"name_of_hero":"Minsitthar"
+"name_of_hero":"Minsitthar",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Minsitthar%20-%20Hero741.png"
 },
 {
-"name_of_hero":"Miya"
+"name_of_hero":"Miya",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Miya%20-%20Hero011.png"
 },
 {
-"name_of_hero":"Moskov"
+"name_of_hero":"Moskov",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Moskov%20-%20Hero311.png"
 },
 {
-"name_of_hero":"Nana"
+"name_of_hero":"Nana",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Nana%20-%20Hero051.png"
 },
 {
-"name_of_hero":"Natalia"
+"name_of_hero":"Natalia",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Natalia%20-%20Hero241.png"
 },
 {
-"name_of_hero":"Natan"
+"name_of_hero":"Natan",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Natan%20-%20Hero1071.png"
 },
 {
-"name_of_hero":"Odette"
+"name_of_hero":"Odette",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Odette%20-%20Hero461%20(Revamped).png"
 },
 {
-"name_of_hero":"Paquito"
+"name_of_hero":"Paquito",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Paquito%20-%20Hero1031.png"
 },
 {
-"name_of_hero":"Pharsa"
+"name_of_hero":"Pharsa",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Pharsa%20-%20Hero521.png"
 },
 {
-"name_of_hero":"Phoveus"
+"name_of_hero":"Phoveus",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Phoveus%20-%20Hero1061.png"
 },
 {
-"name_of_hero":"Phylax"
+"name_of_hero":"Phylax",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Phylax%20-%20Hero1111.png"
 },
 {
-"name_of_hero":"Popol and Kupa"
+"name_of_hero":"Popol and Kupa",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Popol%20and%20Kupa%20-%20Hero941.png"
 },
 {
-"name_of_hero":"Rafaela"
+"name_of_hero":"Rafaela",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Rafaela%20-%20Hero141.png"
 },
 {
-"name_of_hero":"Roger"
+"name_of_hero":"Roger",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Roger%20-%20Hero391.png"
 },
 {
-"name_of_hero":"Ruby"
+"name_of_hero":"Ruby",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Ruby%20-%20Hero291.png"
 },
 {
-"name_of_hero":"Saber"
+"name_of_hero":"Saber",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Saber%20-%20Hero031.png"
 },
 {
-"name_of_hero":"Selena"
+"name_of_hero":"Selena",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Selena%20-%20Hero631.png"
 },
 {
-"name_of_hero":"Silvanna"
+"name_of_hero":"Silvanna",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Silvanna%20-%20Hero901.png"
 },
 {
-"name_of_hero":"Sun"
+"name_of_hero":"Sun",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Sun%20-%20Hero271.png"
 },
 {
-"name_of_hero":"Terizla"
+"name_of_hero":"Terizla",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Terizla%20-%20Hero821.png"
 },
 {
-"name_of_hero":"Thamuz"
+"name_of_hero":"Thamuz",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Thamuz%20-%20Hero721.png"
 },
 {
-"name_of_hero":"Tigreal"
+"name_of_hero":"Tigreal",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Tigreal%20-%20Hero061.png"
 },
 {
-"name_of_hero":"Uranus"
+"name_of_hero":"Uranus",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Uranus%20-%20Hero591.png"
 },
 {
-"name_of_hero":"Vale"
+"name_of_hero":"Vale",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Vale%20-%20Hero661.png"
 },
 {
-"name_of_hero":"Valentina"
+"name_of_hero":"Valentina",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Valentina%20-%20Hero1101.png"
 },
 {
-"name_of_hero":"Valir"
+"name_of_hero":"Valir",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Valir%20-%20Hero571.png"
 },
 {
-"name_of_hero":"Vexana"
+"name_of_hero":"Vexana",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Vexana%20-%20Hero381.png"
 },
 {
-"name_of_hero":"Wanwan"
+"name_of_hero":"Wanwan",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Wanwan%20-%20Hero891.png"
 },
 {
-"name_of_hero":"X.Borg"
+"name_of_hero":"X.Borg",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Xborg%20-%20Hero831.png"
 },
 {
-"name_of_hero":"Yi Sun-shin"
+"name_of_hero":"Yi Sun-shin",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Yi%20Sun-shin%20-%20Hero301.png"
 },
 {
-"name_of_hero":"Yu Zhong"
+"name_of_hero":"Yu Zhong",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Yu%20Zhong%20-%20Hero951.png"
 },
 {
-"name_of_hero":"Yve"
+"name_of_hero":"Yve",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Yve%20-%20Hero1011.png"
 },
 {
-"name_of_hero":"Zhask"
+"name_of_hero":"Zhask",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Zhask%20-%20Hero501.png"
 },
 {
-"name_of_hero":"Zilong"
+"name_of_hero":"Zilong",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Zilong%20-%20Hero161.png"
 }
 ]
