--- a/all_heroes_sorted_by_alphabetical.html
+++ b/all_heroes_sorted_by_alphabetical.html
@@ -109,7 +109,7 @@
 },
 {
 "name_of_hero":"Cyclops",
-"portrait_of_hero'":"https://github.com/Lara3924/Lara_Image/raw/main/Cyclops%20-%20Hero331.png"
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Cyclops%20-%20Hero331.png"
 },
 {
 "name_of_hero":"Diggie",
