--- a/all_heroes_sorted_by_default.html
+++ b/all_heroes_sorted_by_default.html
@@ -81,7 +81,7 @@
 },
 {
 "name_of_hero":"Cyclops",
-"portrait_of_hero'":"https://github.com/Lara3924/Lara_Image/raw/main/Cyclops%20-%20Hero331.png"
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Cyclops%20-%20Hero331.png"
 },
 {
 "name_of_hero":"Lapu-Lapu",
