--- a/tank_heroes_sorted_by_sale_time.html
+++ b/tank_heroes_sorted_by_sale_time.html
@@ -1,5 +1,9 @@
 [
 {
+"name_of_hero":"Phylax",
+"portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Phylax%20-%20Hero1111.png"
+},
+{
 "name_of_hero":"Gloo",
 "portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Gloo%20-%20Hero1041.png"
 },
