--- a/all_heroes_sorted_by_sale_time.html
+++ b/all_heroes_sorted_by_sale_time.html
@@ -1,5 +1,11 @@
 [
 {
+"name_of_hero":"Yin",
+"role_of_hero":"Fighter"
+"icon_of_hero";"https://static.wikia.nocookie.net/mobile-legends/images/f/f6/Yin.png/revision/latest/scale-to-width-down/177?cb=20211231060939"
+"portrait_of_hero":"null"
+},
+{
 "name_of_hero":"Floryn",
 "portrait_of_hero":"https://github.com/Lara3924/Lara_Image/raw/main/Floryn%20-%20Hero1121.png"
 },
